overlays/dev/api/merge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api
spec:
  ingressClassName: nginx
  rules:
  - host: api-dev.medkick-rpm.com
    http:
      paths:
      - backend:
          service:
            name: api-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api-dev.medkick-rpm.com
    secretName: api-medkick-rpm-com-tls
